--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,7 @@ jobs:
         run: |
           echo "PORT=${{ env.PORT }}" > .env
           echo "JWT_SECRET=test-jwt-secret-for-ci-only" >> .env
+          echo "SESSION_SECRET=test-session-secret-for-ci" >> .env
           echo "ATLASSIAN_TEST_PAT=${{ secrets.ATLASSIAN_TEST_PAT }}" >> .env
           echo "FIGMA_TEST_PAT=${{ secrets.FIGMA_TEST_PAT }}" >> .env
           echo "ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}" >> .env
