--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@anthropic-ai/sdk": "^0.68.0",
     "@atlaskit/adf-schema": "^50.2.3",
     "@atlaskit/editor-markdown-transformer": "^5.16.5",
+    "@aws-sdk/client-cloudwatch-logs": "^3.943.0",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@sentry/node": "^8.51.0",
     "@sentry/profiling-node": "^8.51.0",
