--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,6 +52,7 @@ jobs:
 
       - name: Run E2E Tests
         run: npm run test:e2e:rest-api
+        run: npm run test:e2e:client
       - name: Save Artifacts
         if: always()
         uses: actions/upload-artifact@v4
