--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "dev": "concurrently \"npm:dev:server\" \"npm:dev:client\"",
+    "dev:server": "node --import ./loader.mjs server/server.ts",
+    "dev:client": "vite",
+    "build": "npm run build:client",
+    "build:client": "vite build",
     "start-local": "node --import ./loader.mjs server/server.ts",
     "typecheck": "tsc --noEmit",
     "prepare": "husky",
@@ -37,6 +42,7 @@
     "@sentry/node": "^8.51.0",
     "@sentry/profiling-node": "^8.51.0",
     "ai": "^5.0.104",
+    "ajv": "^8.17.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.1.2",
     "cors": "^2.8.5",
@@ -49,6 +55,8 @@
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
     "otpauth": "^9.3.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tmp-promise": "^3.0.3",
     "undici": "^6.19.5",
     "undici-types": "^6.19.5",
@@ -66,19 +74,27 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.14.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "commander": "^12.1.0",
+    "concurrently": "^9.0.1",
     "husky": "^9.1.4",
     "jest": "^30.1.2",
     "open": "^10.2.0",
     "openid-client": "^5.7.1",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
     "semver": "^7.6.3",
     "supertest": "^7.1.4",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vite": "^6.0.0"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
