adding confluence support

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@sentry/node": "^8.51.0",
     "@sentry/profiling-node": "^8.51.0",
+    "@tailwindcss/typography": "^0.5.19",
     "ai": "^5.0.104",
     "ajv": "^8.17.1",
     "aws-sdk": "^2.1692.0",
@@ -57,6 +58,8 @@
     "otpauth": "^9.3.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tmp-promise": "^3.0.3",
     "undici": "^6.19.5",
     "undici-types": "^6.19.5",
