--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eventsource": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "googleapis": "^169.0.0",
     "jose": "^6.0.12",
     "marklassian": "^1.0.4",
     "morgan": "^1.10.1",
@@ -77,7 +78,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.19.3",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@types/supertest": "^6.0.3",
