Adds Google Drive OAuth configuration docs

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,15 @@ FIGMA_CLIENT_SECRET=YOUR_FIGMA_CLIENT_SECRET_HERE
 # Callback URL for Figma: {VITE_AUTH_SERVER_URL}/auth/callback/figma
 FIGMA_OAUTH_SCOPES="file_content:read file_metadata:read file_comments:read current_user:read"
 
+# --- Google Drive OAuth Configuration (OPTIONAL) ---
+# Google OAuth 2.0 client ID (from console.cloud.google.com)
+GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID_HERE
+# Google OAuth 2.0 client secret (keep this secret!)
+GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET_HERE
+# OAuth 2.0 scopes for Google Drive API access
+# Callback URL for Google: {VITE_AUTH_SERVER_URL}/auth/callback/google
+GOOGLE_OAUTH_SCOPES="https://www.googleapis.com/auth/drive"
+
 # --- OAuth Server Configuration ---
 # Base URL for this OAuth server (used in client registration/discovery)
 VITE_AUTH_SERVER_URL=http://localhost:3000
