--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@anthropic-ai/sdk": "^0.68.0",
     "@atlaskit/adf-schema": "^50.2.3",
     "@atlaskit/editor-markdown-transformer": "^5.16.5",
+    "@aws-sdk/client-cloudwatch-logs": "^3.965.0",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@sentry/node": "^8.51.0",
     "@sentry/profiling-node": "^8.51.0",
@@ -51,6 +52,7 @@
     "eventsource": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "googleapis": "^169.0.0",
     "jose": "^6.0.12",
     "marklassian": "^1.0.4",
     "morgan": "^1.10.1",
