--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "uuid": "^11.0.3",
     "winston": "^3.17.0",
     "winston-cloudwatch": "^6.3.0",
-    "yaml": "^2.8.1"
+    "yaml": "^2.8.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@jest/globals": "^30.1.2",
