--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "googleapis": "^169.0.0",
+    "hono": "^4.11.3",
     "jose": "^6.0.12",
     "marklassian": "^1.0.4",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
     "otpauth": "^9.3.6",
+    "picomatch": "^4.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
