--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@anthropic-ai/sdk": "^0.68.0",
     "@atlaskit/adf-schema": "^50.2.3",
     "@atlaskit/editor-markdown-transformer": "^5.16.5",
-    "@aws-sdk/client-cloudwatch-logs": "^3.965.0",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@sentry/node": "^8.51.0",
     "@sentry/profiling-node": "^8.51.0",
@@ -52,14 +51,11 @@
     "eventsource": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
-    "googleapis": "^169.0.0",
-    "hono": "^4.11.3",
     "jose": "^6.0.12",
     "marklassian": "^1.0.4",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
     "otpauth": "^9.3.6",
-    "picomatch": "^4.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
@@ -70,8 +66,7 @@
     "uuid": "^11.0.3",
     "winston": "^3.17.0",
     "winston-cloudwatch": "^6.3.0",
-    "yaml": "^2.8.1",
-    "zod": "^3.25.76"
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@jest/globals": "^30.1.2",
