don't async google, move to node 20

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,6 +43,10 @@ jobs:
           echo "FIGMA_OAUTH_SCOPES=${{ vars.FIGMA_OAUTH_SCOPES }}" >> repo_env
           echo "FIGMA_CLIENT_SECRET=${{ secrets.FIGMA_CLIENT_SECRET }}" >> repo_env
           ####
+          echo "GOOGLE_CLIENT_ID=${{ vars.GOOGLE_CLIENT_ID }}" >> repo_env
+          echo "GOOGLE_OAUTH_SCOPES=${{ vars.GOOGLE_OAUTH_SCOPES }}" >> repo_env
+          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> repo_env
+          ####
           echo "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" >> repo_env
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> repo_env
           ####
