--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -71,7 +71,7 @@ jobs:
 
           docker_full_cleanup: true
 
-          aws_ec2_instance_type: t3.small
+          aws_ec2_instance_type: t3.medium
           aws_ec2_instance_root_vol_size: 16
 
           repo_env: repo_env
