--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -71,6 +71,10 @@ jobs:
 
           docker_full_cleanup: true
 
+          docker_cloudwatch_enable: true
+          docker_cloudwatch_lg_name: "/cascade-mcp/${{ inputs.environment }}"
+          docker_cloudwatch_retention_days: 1
+
           aws_ec2_instance_type: t3.medium
           aws_ec2_instance_root_vol_size: 16
 
