--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@sentry/node": "^8.51.0",
     "@sentry/profiling-node": "^8.51.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/jsdom": "^27.0.0",
+    "@types/turndown": "^5.0.6",
     "ai": "^5.0.104",
     "ajv": "^8.17.1",
     "aws-sdk": "^2.1692.0",
@@ -55,6 +57,7 @@
     "googleapis": "^169.0.0",
     "hono": "^4.11.3",
     "jose": "^6.0.12",
+    "jsdom": "^27.0.1",
     "marklassian": "^1.0.4",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
@@ -65,6 +68,7 @@
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "tmp-promise": "^3.0.3",
+    "turndown": "^7.2.2",
     "undici": "^6.19.5",
     "undici-types": "^6.19.5",
     "uuid": "^11.0.3",
