--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "eventsource": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
-    "googleapis": "^169.0.0",
+    "google-auth-library": "^9.0.0",
     "hono": "^4.11.3",
     "jose": "^6.0.12",
     "marklassian": "^1.0.4",
