supports figma comments

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ FIGMA_CLIENT_ID=YOUR_FIGMA_CLIENT_ID_HERE
 FIGMA_CLIENT_SECRET=YOUR_FIGMA_CLIENT_SECRET_HERE
 # OAuth 2.0 scopes for Figma API access (space-separated)
 # Callback URL for Figma: {VITE_AUTH_SERVER_URL}/auth/callback/figma
-FIGMA_OAUTH_SCOPES="file_content:read file_metadata:read file_comments:read current_user:read"
+FIGMA_OAUTH_SCOPES="file_content:read file_metadata:read file_comments:read file_comments:write current_user:read"
 
 # --- Google Drive OAuth Configuration (OPTIONAL) ---
 # Google OAuth 2.0 client ID (from console.cloud.google.com)
@@ -80,7 +80,7 @@ FIGMA_CLIENT_ID=YOUR_FIGMA_CLIENT_ID_HERE
 # Figma OAuth 2.0 client secret (keep this secret!)
 FIGMA_CLIENT_SECRET=YOUR_FIGMA_SECRET_HERE
 # OAuth 2.0 scopes for Figma API access (comma-separated)
-FIGMA_OAUTH_SCOPES="file_content:read,file_comments:read"
+FIGMA_OAUTH_SCOPES="file_content:read,file_comments:read,file_comments:write"
 
 # --- Runtime Configuration ---
 # Whether to check JWT expiration (set to 'true' to enable)
@@ -95,3 +95,7 @@ FIGMA_OAUTH_SCOPES="file_content:read,file_comments:read"
 # --- Feature Flags ---
 # Enable split shell story prompts (set to 'true' to enable)
 # USE_SPLIT_SHELL_STORY_PROMPTS=false
+# Save Figma comments to cache for debugging (set to 'true' to enable)
+# SAVE_FIGMA_COMMENTS_TO_CACHE=false
+# Save Figma semantic XML to cache for debugging (set to 'true' to enable)
+# SAVE_FIGMA_SEMANTIC_XML_TO_CACHE=false
