--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "google-auth-library": "^9.0.0",
     "hono": "^4.11.3",
     "jose": "^6.0.12",
+    "linkedom": "^0.18.12",
     "marklassian": "^1.0.4",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
