Enables Google Docs context via Service Account

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,13 @@ GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET_HERE
 # Callback URL for Google: {VITE_AUTH_SERVER_URL}/auth/callback/google
 GOOGLE_OAUTH_SCOPES="https://www.googleapis.com/auth/drive"
 
+# --- Google Service Account Configuration (OPTIONAL - for REST API) ---
+# Google Service Account JSON for server-to-server authentication
+# Used by REST API to access Google Docs linked in Jira epics
+# See docs/google-service-account.md for setup instructions
+# Format: Single-line JSON string with escaped quotes
+# GOOGLE_SERVICE_ACCOUNT_JSON='{"type":"service_account","project_id":"...","private_key":"...","client_email":"..."}'
+
 # --- OAuth Server Configuration ---
 # Base URL for this OAuth server (used in client registration/discovery)
 VITE_AUTH_SERVER_URL=http://localhost:3000
