Reverts analyze-feature-scope and writing-shell-story logic Fix imports Reverts tools Adds Google Service Account encryption and reorganize client code
Renames EncryptionPage to GoogleServiceEncryptionForm

Removes old approach and simplify encrypt endpoint

Encrypts Google Service Account credentials

Encrypts Google Service Account credentials

Encrypts Google service account token

Removes duplicated Google Docs context setup

Removes security warning about plaintext JSON

Improves layout with shared components

Loads encryption keys from environment
Reset e2e test

Clarifies Google service account encryption setup

Renames Google-specific encryption variables

Renames Google RSA keys to generic RSA keys

Refactors key management to encryption manager
Exposes public key for manual encryption

Refactors and doc cleanup

Updates Google Service Account Encryption docs

Adds encryption test

Decouples Google service account and encryption

Makes encryption tool generic for any text

Refactors encryption setup documentation.

Clarifies RSA key purpose and setup

Simplifies encryption setup and documentation

Clarifies Google auth setup in env example

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,6 +47,9 @@ jobs:
           echo "GOOGLE_OAUTH_SCOPES=${{ vars.GOOGLE_OAUTH_SCOPES }}" >> repo_env
           echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> repo_env
           ####
+          echo "RSA_PUBLIC_KEY=${{ secrets.RSA_PUBLIC_KEY }}" >> repo_env
+          echo "RSA_PRIVATE_KEY=${{ secrets.RSA_PRIVATE_KEY }}" >> repo_env
+          ####
           echo "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" >> repo_env
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> repo_env
           ####
