--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.13.0",
     "remark-gfm": "^4.0.1",
     "tmp-promise": "^3.0.3",
     "turndown": "^7.2.2",
