--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,14 @@ GOOGLE_OAUTH_SCOPES="https://www.googleapis.com/auth/drive"
 # Format: Single-line JSON string with escaped quotes
 # GOOGLE_SERVICE_ACCOUNT_JSON='{"type":"service_account","project_id":"...","private_key":"...","client_email":"..."}'
 
+# Google Service Account (Encrypted) - RECOMMENDED over plaintext JSON
+# Encrypted service account credentials for secure storage
+# Generate using: http://localhost:3000/google-service-encrypt
+# Format: RSA-ENCRYPTED:<base64-encoded-encrypted-credentials>
+# See docs/google-service-account-encryption.md for setup instructions
+# GOOGLE_SERVICE_ACCOUNT_ENCRYPTED=RSA-ENCRYPTED:eyJhbGci...
+# Note: RSA keys are auto-generated in cache/keys/google-rsa/ on first use
+
 # --- OAuth Server Configuration ---
 # Base URL for this OAuth server (used in client registration/discovery)
 VITE_AUTH_SERVER_URL=http://localhost:3000
