--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,8 @@ GOOGLE_OAUTH_SCOPES="https://www.googleapis.com/auth/drive"
 # Used by REST API to access Google Docs linked in Jira epics
 # See docs/google-service-account.md for setup instructions
 # Format: Single-line JSON string with escaped quotes
-# GOOGLE_SERVICE_ACCOUNT_JSON='{"type":"service_account","project_id":"...","private_key":"...","client_email":"..."}'
+# GOOGLE_SERVICE_ACCOUNT_ENCRYPTED='RSA-ENCRYPTED:...'
+# To generate: Visit /google-service-encrypt while server is running
 
 # Google Service Account (Encrypted) - RECOMMENDED over plaintext JSON
 # Encrypted service account credentials for secure storage
