improves questions behavior

--- a/.env.example
+++ b/.env.example
@@ -104,5 +104,7 @@ FIGMA_OAUTH_SCOPES="file_content:read,file_comments:read,file_comments:write"
 # USE_SPLIT_SHELL_STORY_PROMPTS=false
 # Save Figma comments to cache for debugging (set to 'true' to enable)
 # SAVE_FIGMA_COMMENTS_TO_CACHE=false
+# Save Figma sticky notes to cache for debugging (set to 'true' to enable)
+# SAVE_FIGMA_NOTES_TO_CACHE=false
 # Save Figma semantic XML to cache for debugging (set to 'true' to enable)
 # SAVE_FIGMA_SEMANTIC_XML_TO_CACHE=false
