Refactors and doc cleanup

--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,8 @@ GOOGLE_OAUTH_SCOPES="https://www.googleapis.com/auth/drive"
 # --- Google Service Account Configuration (OPTIONAL - for REST API) ---
 # Google Service Account JSON for server-to-server authentication
 # Used by REST API to access Google Docs linked in Jira epics
-# See docs/google-service-account.md for setup instructions
+# See docs/google-service-account-encryption.md for setup instructions
+# To create a service account: https://console.cloud.google.com/iam-admin/serviceaccounts
 # Format: Single-line JSON string with escaped quotes
 # GOOGLE_SERVICE_ACCOUNT_ENCRYPTED='RSA-ENCRYPTED:...'
 # To generate: Visit /google-service-encrypt while server is running
