--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,7 @@ jobs:
         run: npm ci
 
       - name: Run E2E Tests
-        run: npm run test:e2e:rest-api
+        run: npm run test:e2e
       - name: Save Artifacts
         if: always()
         uses: actions/upload-artifact@v4
