feat: Add Figma API rate limiting improvements
- Implement configurable comment posting rate limits with ATTEMPT_TO_STAY_WITHIN_VIEW_SEAT_LIMIT env var
- Add getPostDelayMs() for View/Collab seat mode (5/min) vs Dev/Full seat mode (24/min)
- Add rate limit header logging in Figma API client
- Remove redundant API calls in figma-review-design
- Add delete-figma-comments.ts utility script
- Document rate limiting strategy in specs 055 and 056
- Clean up debug logging in server, connection-hub, and figma-review-design
- Add MCP flow diagrams and specification documentation
- Add session reconnection specs (778, 778b) and E2E test documentation

--- a/.env.example
+++ b/.env.example
@@ -117,3 +117,7 @@ FIGMA_OAUTH_SCOPES="file_content:read,file_comments:read,file_comments:write"
 # SAVE_FIGMA_NOTES_TO_CACHE=false
 # Save Figma semantic XML to cache for debugging (set to 'true' to enable)
 # SAVE_FIGMA_SEMANTIC_XML_TO_CACHE=false
+# Attempt to stay within View/Collab seat rate limits for Figma comment posting
+# When true: posts comments at 5/min (12s delay) to stay within "up to 5/min" Tier 2 limit
+# When false: posts comments at 24/min (2.5s delay) for Dev/Full seats
+# ATTEMPT_TO_STAY_WITHIN_VIEW_SEAT_LIMIT=false
